<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSignUpIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_id_title"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etSignUpID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_id_edit"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpIdTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSignUpPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_password_title"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/tvSignUpIdTitle"
        app:layout_constraintTop_toBottomOf="@id/etSignUpID"/>

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_login_password_edit"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpPasswordTitle"/>

    <TextView
        android:id="@+id/tvSignUpNickNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_nickname_title"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/etSignUpPassword"
        app:layout_constraintStart_toStartOf="@id/etSignUpPassword"/>

    <EditText
        android:id="@+id/etSignUpNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_nickname_edit"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpNickNameTitle"/>

    <TextView
        android:id="@+id/tvSignUpPhoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_phone_title"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/etSignUpNickName"
        app:layout_constraintStart_toStartOf="@id/etSignUpNickName"/>

    <EditText
        android:id="@+id/etSignUpPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_phone_edit"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpPhoneTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textColor="@color/white"
        android:background="@drawable/bg_solid100_purple"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>